<resources>
    <string name="app_name">AppContaproRuteros</string>
    <string name="sing_in">Entrar</string>
    <string name="sing_in_title">Iniciar Sesión</string>
    <string name="remember_user">Recordar Usuario</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_pass">Contraseña</string>
    <string name="clients">Clientes</string>
    <string name="stock">Inventario</string>
    <string name="activity">Actividad</string>
    <string name="profile">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more">Más</string>
    <string name="visit">Visita</string>
    <string name="search">Buscar</string>
    <string name="empty_string" />
    <string name="order">Venta</string>
    <string name="payment">Cobro</string>
    <string name="photo">Foto</string>
    <string name="diary">Agendar</string>
    <string name="diaries">Agendar</string>
    <string name="edit">Editar</string>
    <string name="comment">Coment.</string>
    <string name="comment_full">Comentario</string>
    <string name="change_location">Reubicar</string>
    <string name="balance">Saldo: </string>
    <string name="credit">Crédito: </string>
    <string name="cancel">Cancelar</string>
    <string name="apply">Confirmar</string>
    <string name="name">Nombre</string>
    <string name="phone">Teléfono</string>
    <string name="email">Correo electrónico</string>
    <string name="category">Departamento</string>

    <string-array name="photo_action">
        <item>Tomar Foto</item>
        <item>Abrir galería</item>
    </string-array>


    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor amet la croix edison bulb helvetica jianbing selvage tofu disrupt chartreuse 
        vexillologist thundercats kickstarter wolf freegan live-edge. Aesthetic hammock butcher next 
        level mumblecore before they sold out poke. Keffiyeh tattooed pork belly, mumblecore air plant 
        brooklyn asymmetrical austin helvetica normcore blue bottle affogato hexagon hot chicken prism. 
        Chicharrones distillery small batch actually yr jianbing, mustache ugh four loko occupy pinterest 
        selfies messenger bag. Typewriter try-hard brooklyn synth selfies.
    </string>
    <string name="comment_activity">Comentarios</string>
    <string name="time_of_visit">Minutos que durarás</string>
    <string name="minutes">minutos</string>
    <string name="ok">Aceptar</string>
    <string name="share">Compartir</string>
    <string name="select">Seleccionar</string>
    <string name="add">Agregar productos</string>
    <string name="save">Guardar</string>
    <string name="delete">Borrar</string>
    <string name="add_quantity">+</string>
    <string name="less">-</string>
    <string name="msg_exit_sale">¿Está seguro que desea salir  sin guardar?</string>
    <string name="msg_exit_no_save">No se guardará ningún dato.</string>

    <string name="two_string_format">%s %s</string>


    <plurals name="items_selected">
        <item quantity="one">%d producto seleccionado</item>
        <item quantity="other">%d productos seleccionados</item>
    </plurals>


    <!--
    Formato para días
    -->
    <plurals name="days_formateable">
        <item quantity="one">Ayer</item>
        <item quantity="other">Hace %d días</item>
    </plurals>

    <!--
    Formato para días y horas
    -->
    <plurals name="days_hours_formateable">
        <item quantity="one">Hace %d día y %d horas</item>
        <item quantity="other">Hace %d días y %d horas</item>
    </plurals>

    <!--
    Formato para representacion del tiempo que queda para las visitas.
    -->
    <plurals name="visit_formateable">
        <item quantity="one">En un día</item>
        <item quantity="other">En %d días</item>
    </plurals>

    <string name="time_hours">
        en %d horas
    </string>

    <string name="time_minutes">
        en %d minutos
    </string>
    <!--
    Cadena que representa hoy
    -->
    <string name="today">Hoy</string>

    <!--
  Cadena que representa hoy con tiempo
  -->
    <string name="today_at_time">Hoy a las %d:%02d %s</string>

    <!--
Cadena que representa maniana con tiempo
-->
    <string name="tomorrow_at_time">Mañana a las %d:%02d %s</string>
    <!--
      Formato para horas
    -->
    <plurals name="hours_formateable">
        <item quantity="one">Hace %d hora</item>
        <item quantity="other">Hace %d horas</item>
    </plurals>

    <!--
    Formato de minutos y cortos periodos de tiempo\
    -->
    <plurals name="minutes_formateable">
        <item quantity="one">Hace %d minuto</item>
        <item quantity="other">Hace %d minutos</item>
    </plurals>

    <string name="moments_ago">Hace un momento</string>
    <string name="time_unknow">Desconocido</string>


    <string name="hours_minutes_formateable">Hace %d horas y %d minutos</string>

    <plurals name="item_quantity">
        <item quantity="one">%d artículo</item>
        <item quantity="other">%d artículos</item>
    </plurals>


    <string name="credit_limit">Límite de crédito</string>
    <string name="date_birth">Fecha de nacimiento</string>
    <string name="id_card">RNC/Cédula</string>
    <string name="stock_exceeded">No puedes exceder la cantidad en inventario</string>
    <string name="quantity_no_zero">La cantidad no puede ser cero. (Presione borrar para quitar de la lista).</string>

    <string name="credit_type">Crédito</string>
    <string name="cash_type">Al contado</string>
    <string name="close_payment">Cobrar</string>
    <string name="total_payment">Total Neto</string>
    <string name="client">Cliente</string>
    <string name="invoice_payment">Tipo de pago</string>
    <string name="update_photo_success">¡Foto Actualizada Correctamente!.</string>
    <string name="update_success">¡Actualizado Correctamente!</string>
    <string name="save_success">%s Guardado Exitosamente!</string>
    <string name="error_to_save">Error al intentar guardar.</string>
    <string name="error_to_updater">Error en actualización. Intente de Nuevo.</string>
    <string name="log_out">Salir</string>


    <string name="insert_msg">Guardando a %s</string>
    <string name="update_msg">Actualizando a %s</string>
    <string name="filter">Filtro</string>
    <string name="clean_filter">Limpiar filtro</string>
    <string name="vendor">Vendedor</string>
    <string name="starting">Iniciando...</string>
    <string name="processing">Procesando</string>
    <string name="retry">Reintentar</string>
    <string name="money_received">Dinero Recibido</string>
    <string name="money_return">Devuelta</string>
    <string name="msg_cash_pay">Dígite el monto recibido</string>
    <string name="updater_success">Actualización Terminada Correctamente!</string>
    <string name="do_you_want_exit">¿Deseas salir?</string>
    <string name="not_visit_in_diary">No hay visitas para hoy.</string>
    <string name="create_visit">Crear visita</string>
    <string name="invoices">Facturas</string>
    <string name="nothing_to_show">Nada para mostrar.</string>

    <!--
    Errores
    -->
    <string name="error_not_empty">Campo no puede estar en blanco</string>
    <string name="error_not_valid_phone">Télefono incompleto.</string>
    <string name="error_not_valid_rnc">Este campo es incorrecto.</string>
    <string name="select_items">Seleccionar artículos</string>
    <string name="not_invoices">No hay facturas de %s</string>
    <string name="not_diaries">No hay visitas programadas para %s</string>
    <string name="clean">Borrar</string>
    <string name="empty_money">0.00</string>
    <string name="notification_message">Servicio en ejecucion</string>
    <string name="notification_title">Prueba</string>
    <string name="ticker_text">text ticket</string>
    <string name="find_printer">Buscar impresora</string>
    <string name="check_printer">Por favor verifica que la impresora esté encendida</string>
    <string name="check_printer_s">Por favor verifica que la impresora %s esté encendida</string>
    <string name="visit_finished">¡La visita ha terminado!</string>
    <string name="start_now">Comenzar</string>
    <string name="question_start_visit">¿Comenzar una visita ahora?</string>
    <string name="choose_zone">Elegir Zona</string>
    <string name="choose_ncf">Elegir NCF</string>
    <string name="should_choose_ncf">Selecciona el NCF</string>
    <string name="print">Imprimir</string>
    <string name="not_code">(FACTURA NO REGISTRADA)</string>
    <string name="printing_ticket">¡Imprimiendo Ticket!</string>
    <string name="printer_disconnected">¡Impresora Desconectada!</string>
    <string name="printer_connecting">Conectando a %s</string>
    <string name="invoice_details">Detalles de Factura</string>
    <string name="bluetooth_not_enabled">Bluetooth  está apagado!</string>
    <string name="payment_exact">Pago exacto</string>
    <string name="registers_pending">Hay registros pendientes. No puede salir.</string>
    <string name="visit_started">¡La visita ha iniciado!</string>
    <string name="invoice_not_save">Factura no Generada Oficcialmente.</string>
    <string name="getting_vendor_data">Obteniendo Datos para el Vendedor:</string>
    <string name="got_data">¡Sincronización Finalizada!</string>
    <string name="visit_running">La visita esta en ejecucion</string>
    <string name="diaries_title">Visitas</string>
    <string name="save_diary">¡Visita Guardada Exitosamente!</string>
    <string name="diaries_pendings">Visitas</string>
    <string name="msg_visits_today">Visitas Realizadas</string>
    <string name="sync">Sincronizando...</string>
    <string name="msg_invoices_today">Facturas Generadas Hoy</string>
    <string name="msg_invoices_total">Total Generado Facturas</string>
    <string name="msg_invoices_total_cash">Total Generado Al Contado</string>
    <string name="msg_invoices_total_credit">Total Generado Crédito</string>
    <string name="msg_visits_pending">Visitas Pendientes</string>
    <string name="no_category">SIN CATEGORIA</string>

</resources>
