<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent" android:padding="10dp"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_owner"
            android:layout_gravity="center"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/client_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent" android:padding="10dp"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_phone"
            android:layout_gravity="center"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="10"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent" android:padding="10dp"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_msg"
            android:layout_gravity="center"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent" android:padding="10dp"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_money"
            android:layout_gravity="center"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/credit_limit"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/credit_limit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent" android:padding="10dp"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_date_birth"
            android:layout_gravity="center"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_birth"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent" android:padding="10dp"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_rnc"
            android:layout_gravity="center"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id_card"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/card_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:maxLength="11"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent" android:padding="10dp"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/location"
            />
        <Button
            android:id="@+id/zone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:text="@string/choose_zone"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_toRightOf="@id/location"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent" android:padding="10dp"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_ncf_shield"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/ncf_icon"
            />
        <Button
            android:id="@+id/ncf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:text="@string/choose_ncf"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_toRightOf="@id/ncf_icon"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
</LinearLayout>